# curly

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  client (original).cpp  client.cpp  client.h  curly.cpp  event.h  event_darwin.cpp  event_linux.cpp  make_curly.sh  make_testit.sh  request.cpp  request.h  response.cpp  response.h  test_curly.sh  testit.cpp  tests.cpp  url.cpp  url.h
cmake/: CodeCoverage.cmake
